--- a/contact.html
+++ b/contact.html
@@ -125,7 +125,16 @@
             </div>
             <div class="card-content">
               <h4>Our Location</h4>
-              <p>Based in Chennai, India, our distribution centre serves as the operational hub for nationwide pharmaceutical deliveries. For site visits or logistics coordination, please contact our sales team to arrange an appointment and receive precise delivery guidance for bulk orders.</p>
+              <p>
+               <b> Timon Tender Care Pharmaceuticals Private Limited</b> <br>
+
+<address>Plot No. 32, Ruby Greenvilla,
+Agaramthen Village, Chengalpattu District,
+Chennai – 600126.</address> <br>
+
+
+<b>GST IN: 33AAHCT6068K1ZY</b>
+              </p>
             </div>
           </div>
 
@@ -175,7 +184,7 @@
 
       <div class="contact-form-panel">
         <div class="map-container">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3434.0016572650243!2d78.72780519999999!3d10.3759601!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b007f05ccb8d91f%3A0xdb92f56a8a007f86!2sMMR%20ELECTRICAL%20HARDWARE%20PVT%20LTD!5e1!3m2!1sen!2sin!4v1757568702142!5m2!1sen!2sin" 
+          <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3914.8651651892174!2d80.14711377507474!3d12.872791287433593!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTLCsDUyJzIyLjEiTiA4MMKwMDgnNTguOSJF!5e1!3m2!1sen!2sin!4v1763684678067!5m2!1sen!2sin" 
             width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
 
@@ -262,13 +271,15 @@
       <!-- Services -->
       <div class="col-lg-2 col-6 footer-links">
         <h4>Location</h4>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d248755.79476123664!2d80.04385970491856!3d13.047807812505333!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a5265ea4f7d3361%3A0x6e61a70b6863d433!2sChennai%2C%20Tamil%20Nadu!5e0!3m2!1sen!2sin!4v1762955123943!5m2!1sen!2sin" width="100%" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3914.8651651892174!2d80.14711377507474!3d12.872791287433593!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTLCsDUyJzIyLjEiTiA4MMKwMDgnNTguOSJF!5e1!3m2!1sen!2sin!4v1763684678067!5m2!1sen!2sin" width="100%" height="150" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
 
       <!-- Contact -->
       <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
         <h4>Contact Us</h4>
-        <p>Chennai, Tamil Nadu, India</p>
+        <p>Plot No. 32, Ruby Greenvilla,
+Agaramthen Village, Chengalpattu District,
+Chennai – 600126.</p>
          <p class="mt-4"><strong>Phone:</strong> <span>+91 9444131857</span></p>
         <p><strong>Email:</strong> <span>timontcpharma@gmail.com</span></p>
       </div>
