--- a/about.html
+++ b/about.html
@@ -32,13 +32,13 @@
 
 
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-X262XJ1SMY"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XZGYBLZ9M2"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-X262XJ1SMY');
+  gtag('config', 'G-XZGYBLZ9M2');
 </script>
 </head>
 
