--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
  <title>About Timon Tender Care Pharmaceuticals | Pharma Company in Chennai | Medicine Supplier</title>
-  <meta name="description" content="About Timon Tender Care Pharmaceuticals Private Limited — Leading pharma company in Chennai. Trusted pharmaceutical distributor and medicine supplier to hospitals, clinics, and pharmacies. Learn about our commitment to quality and healthcare excellence.">
+  <meta name="description" content="About Timon Tender Care Pharmaceuticals Private Limited — Leading pharma company in Chennai. Trusted pharmaceutical  to hospitals, clinics, and pharmacies. Learn about our commitment to quality and healthcare excellence.">
   <meta name="keywords" content="about Timon Tender Care, pharma company profile, pharmaceutical distributor, medicine supplier, pharmacy company, Chennai pharmaceutical, healthcare solutions">
 
 
@@ -246,7 +246,7 @@
           <a href="index.html" class="logo d-flex align-items-center">
             <span class="sitename">TIMON TENDER CARE PHARMACEUTICALS PRIVATE LIMITED</span>
           </a>
-          <p>Timon Tender Care Pharmaceuticals Private Limited is your trusted pharmaceutical distributor and medicine supplier in Chennai, India.
+          <p>Timon Tender Care Pharmaceuticals Private Limited is your trusted pharmaceutical  in Chennai, India.
             With years of dedicated service to hospitals, clinics, pharmacies, and healthcare professionals, we deliver reliable, high-quality,
             and affordable pharmaceutical solutions that make healthcare more accessible to all.</p>
 
