--- a/contact.html
+++ b/contact.html
@@ -115,7 +115,7 @@
       <div class="contact-info-panel">
         <div class="contact-info-header">
             <h3>Contact Information</h3>
-            <p>Get in touch with <strong>Timon Tender Care Pharmaceuticals Private Limited</strong>, a trusted pharma company in Chennai. We serve hospitals, clinics, pharmacies, and healthcare professionals with high-quality, research-backed medicines and healthcare solutions. Our role as a pharmaceutical distributor and medicine supplier is built on strict quality controls, regulatory compliance, and a commitment to affordable access. Whether you need hospital procurement, pharmacy restocking, or bulk medicine distribution, our experienced team provides transparent pricing, dependable logistics, and personalised account support to ensure timely delivery and clinical-grade product integrity.</p>
+            <p>Get in touch with <strong>Timon Tender Care Pharmaceuticals Private Limited</strong>, a trusted pharma company in Chennai. We serve hospitals, clinics, pharmacies, and healthcare professionals with high-quality, research-backed medicines and healthcare solutions. Our role as a pharmaceutical  is built on strict quality controls, regulatory compliance, and a commitment to affordable access. Whether you need hospital procurement, pharmacy restocking, or bulk medicine distribution, our experienced team provides transparent pricing, dependable logistics, and personalised account support to ensure timely delivery and clinical-grade product integrity.</p>
           </div>
 
         <div class="contact-info-cards">
@@ -247,7 +247,7 @@ Chennai – 600126.</address> <br>
         <a href="index.html" class="logo d-flex align-items-center">
           <span class="sitename">TIMON TENDER CARE PHARMACEUTICALS PRIVATE LIMITED</span>
         </a>
-        <p>Timon Tender Care Pharmaceuticals Private Limited is a leading pharmaceutical distributor and medicine supplier based in Chennai, India. We partner with hospitals, clinics, and pharmacies to provide research-backed medicines, regulatory documentation, and reliable logistics—delivering healthcare solutions that emphasise quality, safety, and affordability.</p>
+        <p>Timon Tender Care Pharmaceuticals Private Limited is a leading pharmaceutical  based in Chennai, India. We partner with hospitals, clinics, and pharmacies to provide research-backed medicines, regulatory documentation, and reliable logistics—delivering healthcare solutions that emphasise quality, safety, and affordability.</p>
         
          <!-- <div class="social-links d-flex mt-4">
             <a href="https://www.facebook.com/share/1ANWvB1e38/"><i class="bi bi-facebook"></i></a>
