--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 <title>Products — Medicines & Healthcare Supplies | Pharma Company in Chennai</title>
-  <meta name="description" content="Timon Tender Care Pharmaceuticals Private Limited — pharma company in Chennai offering a wide range of medicines and healthcare products for hospitals, clinics, and pharmacies. Trusted pharmaceutical distributor and medicine supplier with quality-assured sourcing and affordable solutions.">
+  <meta name="description" content="Timon Tender Care Pharmaceuticals Private Limited — pharma company in Chennai offering a wide range of medicines and healthcare products for hospitals, clinics, and pharmacies. Trusted pharmaceutical  with quality-assured sourcing and affordable solutions.">
   <meta name="keywords" content="pharma company in Chennai, pharmaceutical distributor, medicine supplier, pharmacy company, healthcare solutions, medicines Chennai, wholesale pharmaceuticals">
 
 
@@ -116,7 +116,7 @@
     </div>
 
   <!-- Product List -->
-  <div class="row" id="productList">Timon Tender Care Pharmaceuticals Private Limited is a Chennai-based pharma company in Chennai specialising in supplying quality-assured medicines and healthcare products to hospitals, clinics, pharmacies and healthcare professionals. As a responsible pharmaceutical distributor and medicine supplier, we prioritise product integrity, clinical safety and regulatory compliance. Our catalogue includes hospital-grade therapeutics, essential generics, branded formulations and over-the-counter healthcare items sourced from verified manufacturers and supported by complete documentation.
+  <div class="row" id="productList">Timon Tender Care Pharmaceuticals Private Limited is a Chennai-based pharma company in Chennai specialising in supplying quality-assured medicines and healthcare products to hospitals, clinics, pharmacies and healthcare professionals. As a responsible pharmaceutical , we prioritise product integrity, clinical safety and regulatory compliance. Our catalogue includes hospital-grade therapeutics, essential generics, branded formulations and over-the-counter healthcare items sourced from verified manufacturers and supported by complete documentation.
 
 We deliver research-informed healthcare solutions designed for institutional procurement and retail pharmacy needs. Each product undergoes batch verification, expiry monitoring and—in cases of temperature-sensitive medicines—cold-chain handling to preserve potency and safety. Our procurement teams work with clinical pharmacists and medical procurement officers to recommend therapeutically appropriate alternatives, dosage forms and cost-effective supply options that maintain clinical efficacy while optimising budgetary constraints.
 
@@ -142,7 +142,7 @@ Explore the searchable product list above for therapeutic categories, brand name
         <a href="index.html" class="logo d-flex align-items-center">
           <span class="sitename">TIMON TENDER CARE PHARMACEUTICALS PRIVATE LIMITED</span>
         </a>
-        <p>Timon Tender Care Pharmaceuticals Private Limited is a Chennai-based pharmaceutical distributor and medicine supplier. We partner with hospitals, clinics and pharmacies to deliver research-backed medicines, comprehensive regulatory documentation, and dependable cold-chain logistics. Our focus on product quality, trust and affordable healthcare solutions ensures institutions receive safe, clinically effective medicines when they need them.</p>
+        <p>Timon Tender Care Pharmaceuticals Private Limited is a Chennai-based pharmaceutical . We partner with hospitals, clinics and pharmacies to deliver research-backed medicines, comprehensive regulatory documentation, and dependable cold-chain logistics. Our focus on product quality, trust and affordable healthcare solutions ensures institutions receive safe, clinically effective medicines when they need them.</p>
         
        <div class="social-links d-flex mt-4">
             <!-- <a href="#"><i class="bi bi-twitter-x"></i></a> -->
