--- a/services.html
+++ b/services.html
@@ -109,10 +109,89 @@
    <section id="services" class="services section">
 
   <!-- Section Title -->
-  <div class="container section-title">
+  <!-- <div class="container section-title">
     <h2>Our Services</h2>
     <p>Comprehensive pharmaceutical distribution and healthcare solutions from a trusted pharma company in Chennai, serving hospitals, clinics, pharmacies and healthcare professionals nationwide.</p>
-  </div><!-- End Section Title -->
+  </div> -->
+  <!-- End Section Title -->
+
+  <section id="services" class="py-5 bg-light">
+  <div class="container">
+    <div class="text-center mb-4">
+      <h2 class="fw-bold">💼 Our Services</h2>
+      <p class="text-muted">
+        At Timon TenderCare Pharmaceuticals Private Limited, we proudly market a diverse range 
+        of healthcare solutions across multiple specialties.
+      </p>
+    </div>
+
+    <div class="row g-4">
+      <div class="col-md-6 col-lg-4">
+        <div class="p-3 border rounded bg-white h-100 shadow-sm">
+          <h5 class="fw-semibold">Dermatology</h5>
+          <p class="text-muted small">Advanced skin care and treatment solutions for dermatological needs.</p>
+        </div>
+      </div>
+
+      <div class="col-md-6 col-lg-4">
+        <div class="p-3 border rounded bg-white h-100 shadow-sm">
+          <h5 class="fw-semibold">Gynecology</h5>
+          <p class="text-muted small">Trusted products supporting women’s health and reproductive care.</p>
+        </div>
+      </div>
+
+      <div class="col-md-6 col-lg-4">
+        <div class="p-3 border rounded bg-white h-100 shadow-sm">
+          <h5 class="fw-semibold">Paediatrics</h5>
+          <p class="text-muted small">Safe and effective medicines designed for children’s health and wellness.</p>
+        </div>
+      </div>
+
+      <div class="col-md-6 col-lg-4">
+        <div class="p-3 border rounded bg-white h-100 shadow-sm">
+          <h5 class="fw-semibold">Orthopedics</h5>
+          <p class="text-muted small">Solutions for bone, joint, and musculoskeletal care.</p>
+        </div>
+      </div>
+
+      <div class="col-md-6 col-lg-4">
+        <div class="p-3 border rounded bg-white h-100 shadow-sm">
+          <h5 class="fw-semibold">Dental</h5>
+          <p class="text-muted small">Products tailored for oral health and dental treatments.</p>
+        </div>
+      </div>
+
+      <div class="col-md-6 col-lg-4">
+        <div class="p-3 border rounded bg-white h-100 shadow-sm">
+          <h5 class="fw-semibold">Surgical</h5>
+          <p class="text-muted small">Essential pharmaceuticals and supplies for surgical procedures.</p>
+        </div>
+      </div>
+
+      <div class="col-md-6 col-lg-4">
+        <div class="p-3 border rounded bg-white h-100 shadow-sm">
+          <h5 class="fw-semibold">Pulmonology</h5>
+          <p class="text-muted small">Respiratory care products for lung and airway health.</p>
+        </div>
+      </div>
+
+      <div class="col-md-6 col-lg-4">
+        <div class="p-3 border rounded bg-white h-100 shadow-sm">
+          <h5 class="fw-semibold">ENT (Ear, Nose & Throat)</h5>
+          <p class="text-muted small">Specialized medicines for ENT-related conditions.</p>
+        </div>
+      </div>
+
+      <div class="col-md-6 col-lg-4">
+        <div class="p-3 border rounded bg-white h-100 shadow-sm">
+          <h5 class="fw-semibold">General Medicine</h5>
+          <p class="text-muted small">Broad range of medicines addressing everyday healthcare needs.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 
   <div class="container" data-aos="fade-up" data-aos-delay="100">
 
@@ -213,7 +292,7 @@
 
     <div class="cta-container text-center mt-5" data-aos="fade-up" data-aos-delay="300">
       <h3>Partner with a Trusted Pharma Company in Chennai</h3>
-      <p>Timon Tender Care Pharmaceuticals Private Limited is a dedicated pharmaceutical distributor and medicine supplier serving hospitals, clinics and pharmacies with research-backed, affordable healthcare solutions. We prioritise product quality, regulatory compliance and service excellence to support patient care and institutional needs.</p>
+      <p>Timon Tender Care Pharmaceuticals Private Limited is a dedicated pharmaceutical  serving hospitals, clinics and pharmacies with research-backed, affordable healthcare solutions. We prioritise product quality, regulatory compliance and service excellence to support patient care and institutional needs.</p>
       <a href="contact.html" class="btn btn-cta">Contact Our Sales Team</a>
     </div>
 
@@ -233,7 +312,7 @@
         <a href="index.html" class="logo d-flex align-items-center">
           <span class="sitename">TIMON TENDER CARE PHARMACEUTICALS PRIVATE LIMITED</span>
         </a>
-        <p>Timon Tender Care Pharmaceuticals Private Limited is a Chennai-based pharmaceutical distributor and medicine supplier. We partner with healthcare institutions and pharmacies to deliver high-quality, research-based medicines, comprehensive documentation, and dependable logistics—ensuring affordable access to essential healthcare solutions.</p>
+        <p>Timon Tender Care Pharmaceuticals Private Limited is a Chennai-based pharmaceutical . We partner with healthcare institutions and pharmacies to deliver high-quality, research-based medicines, comprehensive documentation, and dependable logistics—ensuring affordable access to essential healthcare solutions.</p>
         
         <!-- <div class="social-links d-flex mt-4">
             <a href="https://www.facebook.com/share/1ANWvB1e38/"><i class="bi bi-facebook"></i></a>
