--- a/index.html
+++ b/index.html
@@ -740,7 +740,7 @@
           <form action="https://api.web3forms.com/submit" method="POST" id="form">
     <input type="hidden" name="access_key" value="654aab5d-5b7b-4d16-af3f-dd50bc728c9e" />
     <input type="hidden" name="subject" value="New Submission from Web3Forms" />
-    <input type="hidden" name="redirect" value="https://mmrelectrical.com/" />
+    <input type="hidden" name="redirect" value="https://timontendercare.com/" />
     <input type="checkbox" name="botcheck" id="" style="display: none;" />
               <div class="row g-3">
                 <div class="col-md-6">
@@ -808,12 +808,7 @@
         </a>
         <p>Timon Tender Care Pharmaceuticals Private Limited is your trusted pharmaceutical  in Chennai, India. With years of dedicated service to hospitals, clinics, pharmacies, and healthcare professionals, we deliver quality medicines and research-based pharmaceutical solutions that make healthcare more accessible and affordable.</p>
         
-        <div class="social-links d-flex mt-4">
-            <!-- <a href="#"><i class="bi bi-twitter-x"></i></a> -->
-            <a href="https://www.facebook.com/share/1ANWvB1e38/"><i class="bi bi-facebook"></i></a>
-            <a href="https://www.instagram.com/mmr_electrical_hardware?utm_source=qr&igsh=cmRraTNleTRybG15"><i class="bi bi-instagram"></i></a>
-            <a href="https://www.youtube.com/@MMRELECTRICALHARDWARE/shorts"><i class="bi bi-youtube"></i></a>
-          </div>
+     
       </div>
 
       <!-- Useful Links -->
